--- a/home/styles.css
+++ b/home/styles.css
@@ -111,6 +111,7 @@ body{
     left: 45%;
     transform: translate(-50%, -50%);
     width: 70%;
+    max-width: 1000px;
     height: auto;
     /*height: 70vh;*/
 
@@ -121,6 +122,7 @@ body{
     position: absolute;
     z-index: 1;
 
+    max-width: 300px;
     width: 20%;
     top: 45%;
     left: 20%;
@@ -172,17 +174,6 @@ body{
     background-repeat: repeat;
     background-size: cover;}
 .outer4 { grid-area: 5 / 2 / 6 / 5;}
-
-.bg {
-    width: 100%;
-    height: 200vh;
-
-    position: absolute;
-    top: 95%;
-    z-index: 0;
-    background-image: url(../images/backgrounds/blueFabric.jpg);
-
-}
 
 .recents {
     position: absolute;
@@ -252,10 +243,20 @@ body{
 .div5 { grid-area: 3 / 2 / 4 / 3; }
 .div6 { grid-area: 3 / 3 / 4 / 4; }
 
+.bg {
+    width: 100%;
+    height: 200vh;
 
+    position: absolute;
+    top: 95%;
+    z-index: 0;
+    background-image: url(../images/backgrounds/blueFabric.jpg);
+    /*background-color: red;*/
+}
 .recent-work {
-    position: absolute; 
-    top: 100vh;
+    position: absolute;
+    top:15vh;
+    /*top: 105vh;*/
     width: 100%;
         /*background-color: red;*/
     
@@ -267,7 +268,8 @@ body{
 }
     
 .col1 { grid-area: 1 / 2 / 2 / 3; }
-.col2 { grid-area: 1 / 3 / 2 / 4;}
+.col2 { grid-area: 1 / 3 / 2 / 4;
+padding-right: 40px}
 
 .left-margin{
     /*background-color: blue;*/
